<resources>
    <string name="app_name">Tasks</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="save">Save</string>
    <string name="user">User</string>
    <string name="idk_write_something">Idk, write something</string>
    <string name="profile">Profile</string>
    <string name="write_your_age">Write your age</string>
    <string name="write_your_name">Write your name</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="send_sms">SEND SMS</string>
    <string name="input_code">Input code</string>
    <string name="accept">Accept</string>
    <string name="log_out">LOG OUT</string>
    <string name="update">Update</string>
</resources>