<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">
<androidx.cardview.widget.CardView
    android:layout_marginTop="50dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="100dp"
    android:layout_gravity="center|top"
    >
    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/avatar_iv"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_gravity="center|top"
        android:src="@color/purple_700"
        /></androidx.cardview.widget.CardView>
<EditText
    android:layout_marginHorizontal="20dp"
    android:id="@+id/et_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|bottom"
    android:layout_marginBottom="200dp"
    android:hint="@string/write_your_name"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20dp"
    />
    <EditText
        android:layout_marginHorizontal="20dp"
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="250dp"
        android:hint="@string/write_your_age"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        />
    <Button
        android:id="@+id/btn_save_name"
        android:textSize="28dp"
        android:text="@string/save"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="60dp"
        />
</FrameLayout>