<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.geektech.tasks.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.geektech.tasks.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.geektech.tasks.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.geektech.tasks.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.geektech.tasks.ui.taskFragment.TaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.geektech.tasks.ui.onBoarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />
    <fragment
        android:id="@+id/acceptFragment"
        android:name="com.geektech.tasks.ui.auth.AcceptFragment"
        android:label="fragment_accept"
        tools:layout="@layout/fragment_accept">
        <argument
            android:name="verId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/authFragment"
        android:name="com.geektech.tasks.ui.auth.AuthFragment"
        android:label="fragment_auth"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_acceptFragment"
            app:destination="@id/acceptFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.geektech.tasks.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" />
</navigation>